@@ -41,9 +41,10 @@ subjectProfileEventPlot(
 \arguments{
 \item{data}{Data.frame with data}
 
-\item{paramVar}{string, variable of \code{data} with parameter (used in the y-axis)}
+\item{paramVar}{Character vector with variable(s) of \code{data} 
+with parameters. Variable content is displayed in the y-axis.}
 
-\item{paramLab}{string, label for \code{paramVar}}
+\item{paramLab}{Named character vector, with label for \code{paramVar}.}
 
 \item{paramVarSep}{string with character(s) used to concatenate multiple 
 \code{paramVar}, ' - ' by default.}
